deployments-2/backend/lh-admin/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresslhadmin
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 300
    nginx.ingress.kubernetes.io/proxy-send-timeout: 300
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300
spec:
  rules:
    - host:
      http:
        paths:
         - path: /admin-api
           pathType: Prefix
           backend:
             service:
              name: servicelhadmin
              port:
                number: 80
