deployments-2/backend/lh-admin/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresslhpracticeargo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: 65.2.88.212
spec:
  rules:
    - host:
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: argocd-server
              port:
                number: 8080
